# picofsm

./: CMakeLists.txt  PicoFSM.pc.in
.github/workflows/: ci.yaml
benchmark/: CMakeLists.txt  Sample_bench.cpp
include/: fsm.h
test/: CMakeLists.txt  Sample_test.cpp
